[gd_scene load_steps=14 format=3 uid="uid://cdyhjvdwrkmeu"]

[ext_resource type="Texture2D" uid="uid://cvcjetkibsx3n" path="res://assets/Missiles.png" id="1_mkf8s"]
[ext_resource type="Script" uid="uid://djgngm687x5gx" path="res://scripts/bullet.gd" id="1_y25gk"]
[ext_resource type="Texture2D" uid="uid://bjgn27a6jdhri" path="res://assets/Explosion.png" id="2_l5glv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eoqba"]
atlas = ExtResource("2_l5glv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qncy5"]
atlas = ExtResource("2_l5glv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tamys"]
atlas = ExtResource("2_l5glv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_26lx3"]
atlas = ExtResource("2_l5glv")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1cfmv"]
atlas = ExtResource("2_l5glv")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k76ql"]
atlas = ExtResource("2_l5glv")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_in4mv"]
atlas = ExtResource("2_l5glv")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s437g"]
atlas = ExtResource("2_l5glv")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_iqq7w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eoqba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qncy5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tamys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26lx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1cfmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k76ql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_in4mv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s437g")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y25gk"]
size = Vector2(2.5, 8.5)

[node name="Area2D" type="Area2D" groups=["bullets"]]
script = ExtResource("1_y25gk")

[node name="ExplosionAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_iqq7w")
frame = 7
frame_progress = 1.0

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.5707964
texture = ExtResource("1_mkf8s")
region_enabled = true
region_rect = Rect2(88, 24, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_y25gk")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
